<resources>
    <string name="app_name">Dot.Shop</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading…</string>
    <string name="error_location_address">Unknown Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="create_acount">Create Account</string>
    <string name="email">Email</string>
    <string name="ex_username_email_com">ex:username@email.com</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="eye">eye</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="or">Or</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="have_account">Have Account?</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="to_reset_your_password_please_enter_your_email_address">To reset your Password Please enter your Email Address</string>
    <string name="submit">Submit</string>
    <string name="the_reset_message_has_been_sent_to_your_email">The reset message has been sent to your email</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="offers">Offers</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="search_on_products_or_brands">Search on products or brands</string>
    <string name="personal_info">Personal Info</string>
    <string name="addresses">Addresses</string>
    <string name="payments">Payments</string>
    <string name="vouchers">Vouchers</string>
    <string name="language">Language</string>
    <string name="customer_support">Customer Support</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_password">Change Password</string>
    <string name="change_photo">Change Photo</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="add_new_address">Add new Address</string>
    <string name="add_new_payment_method">Add new Payment Method</string>
    <string name="active">Active</string>
    <string name="previous">Previous</string>
    <string name="order_total">Order Total</string>
    <string name="view_order">View Order</string>
    <string name="order_details">Order Details</string>
    <string name="notifcation">Notifcation</string>
    <string name="title">Title</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="my_cart">My Cart</string>
    <string name="order_summary">Order Summary</string>
    <string name="total">Total</string>
    <string name="delivery_tax">Delivery Tax</string>
    <string name="total_fees">Total Fees</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="apply">Apply</string>
    <string name="promo_code">Promo Code</string>
    <string name="confirm">Confirm</string>
    <string name="continue_1">Continue</string>
    <string name="delivery_info">Delivery Info</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="order_created_successfully">Order Created Successfully</string>
    <string name="order_number">Order Number</string>
    <string name="go_to_home">Go To Home</string>
    <string name="rate_order">Rate Order</string>
    <string name="write_review">write review</string>
    <string name="review_has_been_submit_successfully">Review Has Been Submit Successfully</string>
    <string name="reviews">Reviews</string>
    <string name="verified_purchase">Verified Purchase</string>
    <string name="write_a_review">Write a Review</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="top_offers">Top Offers</string>
    <string name="discount">Discount</string>
    <string name="top_selling">Top Selling</string>
    <string name="more_offers">More Offers</string>

    <string name="order_date">Order Date</string>
    <string name="order_num">Order Num</string>
    <string name="memory_size">Memory Size</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="msg_empty_email">Empty Email Address</string>
    <string name="email_error">Email Error</string>
    <string name="password_error">" Password Error"</string>
    <string name="msg_invalide_email">Invalid Email Address</string>
    <string name="msg_empty_new_password">Empty Password</string>
    <string name="please_complete_data">Please Complete Your Data</string>
    <string name="error">Error</string>
    <string name="exit_app">ExitAPP</string>
    <string name="cancel">Cancel</string>

</resources>