<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_selector"
        android:title="@string/home" />

    <item
        android:id="@+id/order_nav_graph"
        android:icon="@drawable/order_selector"
        android:title="@string/orders" />

    <item
        android:id="@+id/offersFragment"
        android:icon="@drawable/offers_selector"
        android:title="@string/offers" />

    <item
        android:id="@+id/wishlistFragment"
        android:icon="@drawable/wishlist_selector"
        android:title="@string/wishlist" />

    <item
        android:id="@+id/profile_nav_graph"
        android:icon="@drawable/profile_selector"
        android:title="@string/profile" />
</menu>