<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.auth.ResetPasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/login_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_4sdp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/tvReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/to_reset_your_password_please_enter_your_email_address"
        android:textColor="@color/gray_800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_back" />


    <LinearLayout
        android:id="@+id/ll_et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_margin="@dimen/_16sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/et_pa"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/gray_et"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_8sdp"
            android:textAlignment="viewStart"

            android:textSize="@dimen/_12ssp" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:backgroundTint="@color/green"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_et_email" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/the_reset_message_has_been_sent_to_your_email"
        android:textColor="@color/gray_800"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>