<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="Hamza Namira"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/suc_pur"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:text="5 Successful Purshases"
        android:textColor="@color/gray_800"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:clickable="true"
        android:drawablePadding="@dimen/_8sdp"
        android:focusable="true"
        android:text="@string/personal_info"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_personal"
        app:layout_constraintTop_toBottomOf="@+id/suc_pur" />

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/gray_200"
        app:layout_constraintTop_toBottomOf="@+id/tv_personal" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:clickable="true"
        android:drawablePadding="@dimen/_8sdp"
        android:focusable="true"
        android:text="@string/addresses"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintTop_toBottomOf="@+id/view_1" />

    <View
        android:id="@+id/view_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/gray_200"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />


    <TextView
        android:id="@+id/tv_payments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:clickable="true"
        android:drawablePadding="@dimen/_8sdp"
        android:focusable="true"
        android:text="@string/payments"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_card"
        app:layout_constraintTop_toBottomOf="@+id/view_2" />

    <View
        android:id="@+id/view_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/gray_200"
        app:layout_constraintTop_toBottomOf="@+id/tv_payments" />

    <TextView
        android:id="@+id/tv_vouchers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:clickable="true"
        android:drawablePadding="@dimen/_8sdp"
        android:focusable="true"
        android:text="@string/vouchers"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_ticket_expired"
        app:layout_constraintTop_toBottomOf="@+id/view_3" />

    <View
        android:id="@+id/view_4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/gray_200"
        app:layout_constraintTop_toBottomOf="@+id/tv_vouchers" />

    <TextView
        android:id="@+id/tv_Language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:clickable="true"
        android:drawablePadding="@dimen/_8sdp"
        android:focusable="true"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_global"
        app:layout_constraintTop_toBottomOf="@+id/view_4" />

    <View
        android:id="@+id/view_5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/gray_200"
        app:layout_constraintTop_toBottomOf="@+id/tv_Language" />


    <TextView
        android:id="@+id/tv_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:clickable="true"
        android:drawablePadding="@dimen/_8sdp"
        android:focusable="true"
        android:text="@string/customer_support"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic__4_support"
        app:layout_constraintTop_toBottomOf="@+id/view_5" />

    <View
        android:id="@+id/view_6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/gray_200"
        app:layout_constraintTop_toBottomOf="@+id/tv_support" />


    <TextView
        android:id="@+id/tv_signOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:clickable="true"
        android:drawablePadding="@dimen/_8sdp"
        android:focusable="true"
        android:text="@string/sign_out"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_logout"
        app:layout_constraintTop_toBottomOf="@+id/view_6" />

</androidx.constraintlayout.widget.ConstraintLayout>